fix(core): various fixes, defensive copy and correct space tracking